# network_flow_solver

./: .gitignore  CLAUDE.md  LICENSE  README.md  claudecode-prompt-maintenance-scheduling.md  probe_sizes.py  pyproject.toml
.claude/commands/: inspect-package.md  lint.md  test.md  typecheck.md
docs/: AGENTS.md  ARCHITECTURE.md  BENDERS_PERFORMANCE_FINDINGS.md  CODING_STANDARDS.md  task_spec_template.md
docs/superpowers/plans/: 2026-06-27-direct-mip-baseline.md  2026-06-27-generator.md  2026-06-27-pipeline-shared-modules.md  2026-06-28-benders-3a-analytic-mincut.md  2026-06-28-cplex-docplex-benders.md  2026-06-28-direct-mip-cp-sat-path.md
docs/superpowers/specs/: 2026-06-27-direct-mip-formulation-design.md  2026-06-27-generator-design.md  2026-06-27-pipeline-data-model-and-interfaces-design.md  2026-06-28-benders-decomposition-design.md  2026-06-28-cplex-docplex-benders-design.md
src/: backends.py  benders.py  cplex_benders.py  cplex_mip.py  direct_mip.py  generator.py  instance.py  result.py  subproblem.py
tests/: test_backends.py  test_benders.py  test_cplex.py  test_direct_mip.py  test_generator.py  test_instance.py  test_result.py  test_scaffold.py  test_subproblem.py
tests/fixtures/: toy.json
